--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rbt/yii2-sms",
+    "name": "rbt/yii2-rbtsms",
     "description": "This extension useful for sending sms through component, rather your write every where total sms service code you just keep it in component then call it.",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
