--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "rbt",
-            "email": "rbtksk@gmail.com"
+            "email": "sai@gmail.com"
         }
     ],
     "require": {
